--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
-include AUTHORS CHANGES README LICENSE VERSION
-recursive-include edc_search/templates *
+include AUTHORS CHANGES LICENSE VERSION
+include MANIFEST.in
+include *.rst
